# astel

./: .gitignore  .impeccable.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  gpu.yml
apps/web/: eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
docs/: LAUNCH_CHECKLIST.md  MVP_TESTING.md  NEXT_STEPS.md  OPEN_ISSUES.md  REMOTE_ACCESS.md  meshy-analysis.md
docs/architecture/: ARCHITECTURE.md  billing.md  coordinate-conventions.md
docs/eval/: CORPUS.md
docs/research/: 01-core-and-surface.md  02-generative.md  03-capture-video.md  04-physics-lighting-print.md  05-formats-engines.md  06-competitors-positioning.md  07-free-tier-consumer-strategy.md  08-deep-reads.md  09-metrics-targets.md  10-task-engine-spike.md  11-tier1-tier2-photorealism.md  12-trellis-import-audit.md  13-m3-readiness.md  14-triposplat-triage.md  15-pipeline-wiring-audit.md  16-dead-code-audit.md  17-m5-readiness.md  18-post-m6-roadmap.md  19-master-state-and-photorealism.md  20-photorealism-program.md  DECISIONS.md  LICENSE_AUDIT.md  RESEARCH_PLAN.md  RISKS.md
docs/retros/: session-01.md  session-02.md  session-03.md  session-04.md  session-05.md  session-06.md  session-07.md  session-08.md  session-09.md  session-10.md  session-11.md  session-12.md  session-13.md  session-14.md  session-15.md  session-16.md  session-17.md  session-18.md  session-19.md  (+10 more)
infra/: docker-compose.yml
libs/astel_dynamics/: README.md  pyproject.toml
libs/astel_dynamics/src/astel_dynamics/: __init__.py  baked.py  field.py  fit.py  pack.py  timeline.py
libs/astel_dynamics/tests/: _motion.py  test_field_cpu.py  test_fit_cpu.py  test_pack_cpu.py  test_timeline_cpu.py
libs/astel_eval/: README.md  pyproject.toml
libs/astel_eval/src/astel_eval/: __init__.py  __main__.py  adapters.py  bradley_terry.py  corpus.py  corpus_v1.json  gate.py  likert.py  ratings_io.py  runner.py  scoring_models.py
libs/astel_eval/tests/: test_adapters.py  test_bradley_terry.py  test_cli.py  test_corpus.py  test_gate.py  test_likert.py  test_ratings_io.py  test_runner.py
libs/astel_format/: README.md  pyproject.toml
libs/astel_format/src/astel_format/: __init__.py  builder.py  errors.py  models.py  package.py  paths.py  schema_validation.py
libs/astel_format/src/astel_format/schemas/: provenance.schema.json
libs/astel_format/tests/: conftest.py  test_builder_l7.py  test_honesty.py  test_l5_l6_binding.py  test_negative.py  test_roundtrip.py
libs/astel_llm/: README.md  pyproject.toml
libs/astel_llm/src/astel_llm/: __init__.py  adapter.py  generation_spec.py  physics_material.py  pricing.py  spec.py
libs/astel_llm/tests/: test_adapter.py  test_generation_spec.py  test_physics_material.py  test_pricing.py  test_spec.py
libs/astel_scene/: README.md  pyproject.toml
libs/astel_scene/src/astel_scene/: __init__.py  compose.py  contacts.py  layout.py  llm_stage.py  splats.py  transform.py
libs/astel_scene/tests/: _objects.py  test_compose_cpu.py  test_contacts_cpu.py  test_layout_cpu.py  test_llm_stage_cpu.py  test_transform_cpu.py
libs/astel_solid/: README.md  pyproject.toml
libs/astel_solid/src/astel_solid/: __init__.py  convex.py  isosurface.py  mass.py  print3mf.py  printability.py  sdf.py  solidify.py  stl.py
libs/astel_solid/tests/: _shapes.py  test_convex_cpu.py  test_mass_cpu.py  test_print3mf_cpu.py  test_printability_cpu.py  test_sdf_isosurface_cpu.py  test_solidify_cpu.py  test_stl_cpu.py
libs/astel_splat_io/: FORMATS.md  README.md  pyproject.toml
libs/astel_splat_io/src/astel_splat_io/: __init__.py  cloud.py  conventions.py  gltf.py  ply.py  provenance.py  sog.py  spz.py
libs/astel_splat_io/tests/: conftest.py  test_conventions.py  test_gltf.py  test_ply.py  test_provenance.py  test_sog.py  test_spz.py
pipelines/gpu/: README.md  pyproject.toml  run-python.cmd
pipelines/gpu/src/astel_gpu/: __init__.py  cameras.py  capture_eval.py  capture_sfm.py  colmap_io.py  colmap_runner.py  densify.py  dtu.py  env_check.py  export.py  gaussians.py  generative.py  geometry_qa.py  image_qa.py  image_to_multiview.py  l2_triposplat.py  l3_refine.py  metrics.py  mv_enhance.py  mv_reconstruct.py  packaging.py  produce.py  refine.py  render_preview.py  smoke_refit.py  splat_clean.py  synthetic.py  synthetic_eval.py  text_to_image.py  text_to_multiview.py
pipelines/gpu/tests/: conftest.py  test_capture_eval_cpu.py  test_colmap_io_cpu.py  test_colmap_runner_cpu.py  test_densify_cpu.py  test_dtu_cpu.py  test_dynamics_layer_cpu.py  test_export_cpu.py  test_generative_cpu.py  test_geometry_qa_cpu.py  test_image_qa_cpu.py  test_l2_triposplat_cpu.py  test_l3_refine_cpu.py  test_l6_mass_join_cpu.py  test_lod_emit_cpu.py  test_metrics_chunked_cpu.py  test_metrics_cpu.py  test_mv_enhance_cpu.py  test_mv_reconstruct_cpu.py  test_packaging_cpu.py  test_produce_l6_staging_cpu.py  test_refine_cpu.py  test_render_preview_cpu.py  test_smoke_refit.py  test_splat_clean_cpu.py  test_synthetic_eval.py  test_text_to_image_bestof_cpu.py  test_text_to_image_cpu.py  test_text_to_image_gpu.py  test_text_to_multiview_cpu.py  test_video_produce_cpu.py
pipelines/stub/: README.md  make_sample_splat.py  pyproject.toml
pipelines/stub/tests/: test_make_sample_splat.py
scripts/: dev.ps1  setup-gpu-box.ps1  setup-gpu-env.ps1  up.ps1
services/api/: README.md  alembic.ini  pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: a1b2c3d4e5f6_billing_columns.py  c2f332907e2c_initial_schema.py  d4e5f6a7b8c9_production_outcome_columns.py
services/api/src/astel_api/: __init__.py  billing.py  config.py  db.py  engine.py  generation_spec_stage.py  gpu_producer.py  jobs.py  main.py  physics_material_stage.py  producer.py  schemas.py  storage.py
services/api/src/astel_api/temporal/: __init__.py  activities.py  devserver.py  shared.py  worker.py  workflows.py
services/api/tests/: test_api.py  test_artifacts.py  test_billing.py  test_generation_spec_stage.py  test_gpu_producer.py  test_physics_material_stage.py  test_producer_origin.py  test_temporal_engine.py
(+133 files in other folders)
