[project]
name = "astel-scene"
version = "0.1.0"
description = "Scene seeds: compose multiple single-object Gaussian-splat clouds into a multi-object scene with ground-contact and no-overlap placement."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "astel-llm",
]

[tool.uv.sources]
astel-llm = { path = "../astel_llm", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/astel_scene"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["numpy.*", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["astel_llm", "astel_llm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
