[project]
name = "astel-pipeline-stub"
version = "0.1.0"
description = "Astel stub pipeline: procedural sample Gaussian-splat generator (M1)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.scripts]
astel-make-sample = "make_sample_splat:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["make_sample_splat.py", "tests"]

[[tool.mypy.overrides]]
module = ["numpy.*"]
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
